Set symfony project

--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,25 @@
-.docker/data
-.docker/logs
-.docker-sync
-html/.DS_Store
-html/phpunit.xml.dist
-html/symfony.lock
-html/var
-html/vendor
-.idea/
-.idea/*
-logs
-sqlph
-**/.env.local
-html/.web-server-pid
-html/app/config/parameters.yml.dist
-html/app/config/parameters.yml
-html/build/
-html/phpunit.xml
-html/var/*
-html/node_modules/*
-!html/var/cache
-html/var/cache/*
-!html/var/cache/.gitkeep
-!html/var/logs
-html/var/logs/*
-!html/var/logs/.gitkeep
-!html/var/sessions
-html/var/sessions/*
-!html/var/sessions/.gitkeep
-!html/var/SymfonyRequirements.php
-html/vendor/
-html/web/bundles/
-html/web/uploads/picture/
-html/web/media/cache/thumb_car/uploads/
-html/web/media/
-html/.idea
-html/public/build
-html/web/uploads/
-html/composer.phar
-html/web/adminer.sql
-html/public/media/
-html/public/uploads/picture/*
-html/public/uploads/profils/*
-!html/public/uploads/picture/.gitkeep
-html/public/uploads/database/*
-!html/public/uploads/database/.gitkeep
-html/public/uploads/database_bak/
-!html/public/uploads/.gitkeep
-html/data/pdf/*
-html/adminer.php
-html/adminer.sql
-### Mac ###
-.DS_Store
-._.DS_Store
-### Mac ###
-/html/public/adminer.php
-html/yarn.lock
-.docker-sync
-.idea
-html/public/build/*
-!html/public/uploads/messages/pdf/.gitkeep
-!html/public/uploads/messages/picture/.gitkeep
-html/public/uploads/infos/pdf/*
-html/public/uploads/infos/picture/*
-!html/public/uploads/infos/pdf/.gitkeep
-!html/public/uploads/infos/picture/.gitkeep
-html/public/uploads/users/picture/*
-!html/public/uploads/users/picture/.gitkeep
-html/public/uploads/*
-/html/public/bundles/*
 
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
 /vendor/
+###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
