--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
       mariadb:
         image: mariadb:10.6
         env:
-          MARIADB_ROOT_PASSWORD:
+          MARIADB_ROOT_PASSWORD: root
           MARIADB_DATABASE: testunit_sf
           MARIADB_USER: user
           MARIADB_PASSWORD: user
